--- a/app.json
+++ b/app.json
@@ -1,5 +1,5 @@
 {
-  "name": "Wizard MD",
+  "name": "Shaheen Baloch",
   "description": "whatsapp md bot build with nodejs",
   "repository": "https://github.com/Ajmal-Achu/Wizard-MD",
   "logo": "https://telegra.ph/file/e0bc28185977299bf5d2c.jpg",
@@ -9,7 +9,7 @@
   "plan": "heroku-postgresql"
     }],
     "env": {
-      "HEROKU_APP_NAME": {
+      "HEROKU_APP_NAME": {a1E4WTVZZVQ=
         "description": "Heroku app name, same as above entered",
         "required": true
       },
